[CHK-1470] feat: add ELK agent