@@ -22,8 +22,8 @@ WORKDIR /app/
 
 ARG EXTRACTED=/workspace/app/target/extracted
 
-ADD --chown=user https://github.com/microsoft/ApplicationInsights-Java/releases/download/3.4.1/applicationinsights-agent-3.4.1.jar ./applicationinsights-agent.jar
-COPY --chown=user applicationinsights.json ./applicationinsights.json
+# Add ELK agent
+ADD --chown=user https://search.maven.org/remotecontent?filepath=co/elastic/apm/elastic-apm-agent/1.38.0/elastic-apm-agent-1.38.0.jar ./apm-elk-agent.jar
 
 COPY --from=build --chown=user ${EXTRACTED}/dependencies/ ./
 RUN true
@@ -34,5 +34,4 @@ RUN true
 COPY --from=build --chown=user ${EXTRACTED}/application/ ./ 
 RUN true
 
-
-ENTRYPOINT ["java","-javaagent:applicationinsights-agent.jar","org.springframework.boot.loader.JarLauncher"]
+ENTRYPOINT ["java","-javaagent:apm-elk-agent.jar","--enable-preview","org.springframework.boot.loader.JarLauncher"]
